--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "dependencies": {
     "gifencoder": "^2.0.1",
     "lodash": "^4.17.21",
-    "fastify": "^4.21.0",
+    "canvas": "^2.11.1",
+    "fastify": "^4.28.1",
     "handlebars": "^4.7.8",
     "@fastify/formbody": "^7.4.0",
-    "@fastify/static": "^6.10.2",
-    "@fastify/view": "^8.0.0"
+    "@fastify/static": "^7.0.4",
+    "@fastify/view": "^9.1.0"
   },
   "engines": {
     "node": "14.x"
