--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gifencoder": "^2.0.1",
     "lodash": "^4.17.21",
     "canvas": "^2.11.1",
+    "express": "^4.19.2",
     "fastify": "^4.28.1",
     "handlebars": "^4.7.8",
     "@fastify/formbody": "^7.4.0",
