--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
   },
   "homepage": "https://github.com/aDu/pet-pet-gif#readme",
   "dependencies": {
-    "gifencoder": "^2.0.1",
-    "lodash": "^4.17.21",
-    "canvas": "^2.11.1",
-    "express": "^4.19.2",
-    "jsdom": "^16.4.0",
-    "fastify": "^4.28.1",
-    "handlebars": "^4.7.8",
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^7.0.4",
-    "@fastify/view": "^9.1.0"
+    "@fastify/view": "^9.1.0",
+    "canvas": "^2.11.1",
+    "express": "^4.19.2",
+    "fastify": "^4.28.1",
+    "fs-js": "^1.0.6",
+    "gifencoder": "^2.0.1",
+    "handlebars": "^4.7.8",
+    "jsdom": "^16.4.0",
+    "lodash": "^4.17.21"
   },
   "engines": {
     "node": "14.x"
