--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@fastify/view": "^9.1.0",
     "canvas": "^2.11.1",
     "discord-api-types": "^0.37.98",
-    "discord.js": "^14.15.3",
     "express": "^4.19.2",
     "fastify": "^4.28.1",
     "gifencoder": "^2.0.1",
@@ -34,6 +33,6 @@
     "node-fetch": "^2.6.1"
   },
   "engines": {
-    "node": "14.x"
+    "node": "16.11"
   }
 }
