--- a/package.json
+++ b/package.json
@@ -18,17 +18,15 @@
   },
   "homepage": "https://github.com/aDu/pet-pet-gif#readme",
   "dependencies": {
-    "@discordjs/rest": "^2.3.0",
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^7.0.4",
     "@fastify/view": "^9.1.0",
+    "discord.js":"^14.15.3",
     "canvas": "^2.11.1",
-    "discord-api-types": "^0.37.98",
     "express": "^4.19.2",
     "fastify": "^4.28.1",
     "gifencoder": "^2.0.1",
     "handlebars": "^4.7.8",
-    "jsdom": "^16.4.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1"
   },
