--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
-  "name": "pet-pet-gif",
-  "version": "1.0.9",
+  "name": "pet-pet-api",
+  "version": "1.0.0",
   "description": "Given an avatar, generate a petting gif (known as \"petpet\" or \"pet the\").",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aDu/pet-pet-gif.git"
+    "url": "git+https://github.com/instantae/patpatAPI.git"
   },
-  "author": "Alan Du",
+  "author": "Kassandra Milne",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/aDu/pet-pet-gif/issues"
-  },
-  "homepage": "https://github.com/aDu/pet-pet-gif#readme",
+  "homepage": "https://github.com/instantae/patpatAPI.git#readme",
   "dependencies": {
-    "@fastify/formbody": "^7.4.0",
-    "@fastify/static": "^7.0.4",
-    "@fastify/view": "^9.1.0",
     "discord.js":"^14.15.3",
     "canvas": "^2.11.1",
     "express": "^4.19.2",
-    "fastify": "^4.28.1",
     "gifencoder": "^2.0.1",
     "handlebars": "^4.7.8",
     "lodash": "^4.17.21",
@@ -32,5 +24,11 @@
   },
   "engines": {
     "node": "16.11"
-  }
+  },
+  "keywords": [
+    "express",
+    "glitch",
+    "node",
+    "patpat"
+  ]
 }
